src/objects/MarginGuidance__c.object
<CustomObject>
    <description>TFUS-000005243
A Margin guidance record defines the different layers of margin thresholds per combination of product and Territory area.</description>
    <fields>
        <fullName>AreaCode__c</fullName>
        <description>Should be equaled to Account DC_ETM_Code__c (First 3 characters)</description>
        <inlineHelpText>Area Code to be matched with the account&apos;s territory area code available on the account&apos;s ETM Code (First 3 characters)</inlineHelpText>
        <label>Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LowerGuidance__c</fullName>
        <label>Lower Guidance</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Margin Guidances</relationshipLabel>
        <relationshipName>Margin_Guidances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UpperGuidance__c</fullName>
        <label>Upper Guidance</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Margin Guidance</label>
    <nameField>
        <displayFormat>MG#{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Margin Guidances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>